# wchk

./: .gitignore  LICENSE  README.md  pyproject.toml
tests/: __init__.py
wchk/: __about__.py  __init__.py  cli.py
