[build-system]
requires = ["hatchling>=1.8.1"]
build-backend = "hatchling.build"

[project]
name = "wchk"
dynamic = ["version"]
description = "A command line tool to check the status web pages."
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
authors = [
    { name = "Ramiro Gómez", email = "code@ramiro.org" },
]
dependencies = [
    "httpx",
    "rich",
]
keywords = [
    "http",
    "status",
    "webpagecheck",
    "webpagetest",
]

[project.scripts]
wchk = "wchk.cli:main"

[project.urls]
CI = "https://github.com/yaph/wchk/actions"
Changelog = "https://github.com/yaph/wchk/releases"
Homepage = "https://github.com/yaph/wchk"
Issues = "https://github.com/yaph/wchk/issues"

[tool.hatch.version]
path = "wchk/__about__.py"

[tool.hatch.envs.default]
dependencies = [
    "build",
    "flake8",
    "ipdb",
    "pytest",
    "pytest-cov",
    "twine",
]

[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=wchk --cov=tests"
no-cov = "cov --no-cov"

[[tool.hatch.envs.test.matrix]]
python = [
    "37",
    "38",
    "39",
    "310",
    "311",
]

[tool.coverage.run]
branch = true
parallel = true
omit = [
    "wchk/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
]